--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,8 @@ select {
 
 @media screen and (min-width: 700px) {
   main {
+    align-content: center;
+    justify-content: center;
     display: grid;
     grid-template-columns: 1fr 1.2fr;
     grid-template-rows: 0.01fr 0.8fr;
@@ -118,15 +120,21 @@ select {
 }
 .sprzedane p {
   position: absolute;
-  margin-top: -390px;
+  margin-top: -395px;
   margin-left: 220px;
   font-size: 1.2em;
   transform: rotate(20deg);
+  background-color: #171b36;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #77778f;
 }
 .przecena {
-  padding: 0;
+  padding: 8px;
   position: absolute;
-  background-color: tomato;
+  background-color: #a44849;
+  font-size: 1.2em;
+  color: #eeeae8;
 }
 .przecena p {
   padding: 0;
@@ -138,17 +146,50 @@ select {
 .productList article.soldOut .sprzedane {
   display: inline;
 }
+article a:link {
+  text-align: center;
+  text-decoration: none;
+  color: #171b36;
+  background-color: #eeeae8;
+  padding-right: 35px;
+  padding-left: 35px;
+  font-size: 1.2em;
+  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.1);
+}
+article a:visited {
+  text-align: center;
+  text-decoration: none;
+  color: #171b36;
+  background-color: #eeeae8;
+  padding-right: 35px;
+  padding-left: 35px;
+  font-size: 1.2em;
+}
+article a:hover {
+  background-color: #77778f;
+}
+article a:active {
+  text-align: center;
+  text-decoration: none;
+  color: #171b36;
+  background-color: #eeeae8;
+  padding-right: 35px;
+  padding-left: 35px;
+  font-size: 1.2em;
+}
 /*CATEGORIES*/
-
+.categoryList main {
+  display: flex;
+}
 .categoryList ol {
   column-count: 2;
   list-style: none;
   font-size: 2em;
 }
+
 .categoryList ol li {
   margin: 10px;
 }
-
 .categoryList ol li a {
   text-decoration: none;
   color: black;
@@ -156,6 +197,12 @@ select {
 .przycisk {
   width: 300px;
   padding: 0.2em;
-  background-color: white;
+  background-color: #eeeae8;
   text-align: center;
+  margin-bottom: 10px;
+  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.1);
+}
+
+.przycisk:hover {
+  transform: scale(1.1);
 }
